# nso-registry

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/sfrom/: Cargo.toml
crates/sfrom/doc/: sfrom.md
crates/sfrom/examples/: parse.rs
crates/sfrom/src/: lib.rs  sfrom.rs
src/: gamelist.rs  main.rs
