[package]
name = "nso-registry"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Cappy Ishihara <cappy@cappuchino.xyz>"]
description = "Library for parsing Nintendo Switch Online ROM databases"
repository = "https://github.com/RyouVC/nso-registry"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
